--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -1,2 +1,2 @@
 @import "./_settings";
-@import ".meteor/local/build/programs/server/assets/packages/matthew_foundation5-sass/foundation";
+// @import ".meteor/local/build/programs/server/assets/packages/matthew_foundation5-sass/foundation";
