--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -1,2 +1,10 @@
-@import "./_settings";
-@import ".meteor/local/build/programs/server/assets/packages/matthew_foundation5-sass/foundation";
+// @import "./_settings";
+// @import ".meteor/local/build/programs/server/assets/packages/matthew_foundation5-sass/foundation";
+
+//==================Maps Styles=================
+.map-container {
+  width: 800px;
+  max-width: 100%;
+  height: 500px;
+}
+
