--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -1,5 +1,5 @@
-// @import "./_settings";
-// @import ".meteor/local/build/programs/server/assets/packages/matthew_foundation5-sass/foundation";
+@import "./_settings";
+@import ".meteor/local/build/programs/server/assets/packages/matthew_foundation5-sass/foundation";
 
 //==================Maps Styles=================
 .map-container {
