--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -1,6 +1,6 @@
 <template name="layout">
-  <div class="container">
-    <!-- {{> header}} -->
+  {{> header}}
+  <div>
     <div class="main">
       {{> yield}}
     </div>
