--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -11,6 +11,7 @@ body {
   background: #fff;
 
   p {
+    text-align: center;
     font: 1rem "Avenir Next";
     padding: 1rem 2rem 2rem 2rem;
     margin-top: -1.25rem;
@@ -47,7 +48,7 @@ body {
 .button-group {
   position: relative;
   display: inline-block;
-  margin: 1rem 0;
+  margin-bottom: 1rem;
   &:before {
     content: attr(data-grouptype);
     z-index: 99999;
@@ -63,6 +64,13 @@ body {
   }
   button + button {
     margin-left: 5px;
+  }
+}
+
+.targets-list {
+  margin-top: 1.2rem;
+  .alert-box {
+    margin-bottom: .2rem;
   }
 }
 
