--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -70,7 +70,14 @@ body {
 .targets-list {
   margin-top: 1.2rem;
   .alert-box {
+    font-size: 1.2rem;
+    padding-top: 0.625rem;
+    padding-bottom: 0.625rem;
     margin-bottom: .2rem;
+
+    &:hover {
+      background-color: #C7E1B6;
+    }
   }
 }
 
@@ -79,4 +86,27 @@ body {
   width: 800px;
   max-width: 100%;
   height: 500px;
+}
+
+.styled-checkbox {
+  position: relative;
+  border: 2px solid #4f4f4f;
+  float: right;
+  margin-top: 0.45rem;
+  margin-right: 0.25rem;
+  background-color: #fff;
+  width: 1rem;
+  height: 1rem;
+
+  &.checked:after {
+    content: '';
+    position: absolute;
+    bottom: 0.25rem;
+    left: .06rem;
+    width: 0.9rem;
+    height: 1.3rem;
+    border-bottom: 4px solid black;
+    border-right: 4px solid black;
+    transform: rotate(45deg);
+  }
 }
