--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -46,26 +46,23 @@ body {
 }
 
 .button-group {
-  position: relative;
-  display: inline-block;
   margin-bottom: 1rem;
-  &:before {
-    content: attr(data-grouptype);
-    z-index: 99999;
-    color: #999;
-    display: block;
-    font-size: 1rem;
-    padding: 0.25em;
-    border-radius: 50%;
-    background: #fff;
-    position: absolute;
-    left: 42.5%;
-    top: 0.35rem;
-  }
   button + button {
     margin-left: 5px;
   }
 }
+
+input[data-toggle] {
+  display: none; }
+
+input[data-toggle]:checked + label,
+input[data-toggle]:checked + label:active {
+  background-color: salmon;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15) inset, 0 1px 2px rgba(0, 0, 0, 0.05); }
+
+.button-group.toggle li:not(first-child) {
+  margin: 0 -0.9rem; }
+
 
 .targets-list {
   margin-top: 1.2rem;
