--- a/client/views/set-timer/set-timer.html
+++ b/client/views/set-timer/set-timer.html
@@ -1,27 +1,34 @@
 <template name="setTimeTemplate">
 
   <div class="row">
-    <div class="small-12 small-centered columns">
-      <ul class="button-group round toggle" data-toggle="buttons-radio">
-        <li>
-          <input type="radio" name="toggle-group" id="inTimeSwitch" class="button secondary" data-toggle="button">
-          <label for="inTimeSwitch" class="button">
-            Set Launch In
-          </label>
-        </li>
-        <li>
-          <input type="radio" name="toggle-group" id="atTimeSwitch" class="button secondary" data-toggle="button">
-          <label for="atTimeSwitch" class="button">
-            Set Launch At
-          </label>
-        </li>
-      </ul>
+    <div class="small-12 medium-10 large-10 small-centered columns">
+      <div class="header panel">
+        <div class="sign">
+          <h1>Set Time</h1>
+        </div>
+        <p>
+          <ul class="button-group round toggle" data-toggle="buttons-radio">
+            <li>
+              <input type="radio" name="toggle-group" id="inTimeSwitch" class="button secondary" data-toggle="button">
+              <label for="inTimeSwitch" class="button">
+                Set Launch In
+              </label>
+            </li>
+            <li>
+              <input type="radio" name="toggle-group" id="atTimeSwitch" class="button secondary" data-toggle="button">
+              <label for="atTimeSwitch" class="button">
+                Set Launch At
+              </label>
+            </li>
+          </ul>
 
-      {{#if inTimeSwitchSelected}}
-        {{> inTimeTemplate}}
-      {{else}}
-        {{> atTimeTemplate}}
-      {{/if}}
+          {{#if inTimeSwitchSelected}}
+            {{> inTimeTemplate}}
+          {{else}}
+            {{> atTimeTemplate}}
+          {{/if}}
+        </p>
+      </div>
     </div>
   </div>
 
