Correctly adding selected restaurants to an array in the launch collection.  then set up router to take user to the set timmer template.

--- a/client/views/maps/maps.html
+++ b/client/views/maps/maps.html
@@ -6,6 +6,9 @@
           <h1>Select Target Options</h1>
         </div>
         <div class="map-container">
+
+          {{getLaunchID}}
+
           {{#unless geolocationError}}
             {{> googleMap name='map' options=mapOptions}}
           {{else}}
