Created final launch plan page'

--- a/client/views/maps/select-targets.html
+++ b/client/views/maps/select-targets.html
@@ -6,7 +6,8 @@
           <h1>Select Target Options</h1>
         </div>
         {{> map }}
-        <br><a href="#" id="gotoSetTime" class="button success" disabled>Set Launch Time</a>
+        <br>
+        <a href="#" id="gotoSetTime" class="button success" disabled>Set Launch Time</a>
         {{> targetList }}
       </div>
     </div>
