--- a/client/views/set-timer/set-timer.html
+++ b/client/views/set-timer/set-timer.html
@@ -61,7 +61,10 @@
                 <i class="incrementHour fi-arrow-up icon-style"></i>
             </div>
             <div class="large-12 columns">
-              <h1 class="hourValue"></h1>
+              <h1 class="hourValue timeValues"></h1>
+            </div>
+            <div class="large-12 columns">
+              <h1 id="timeLabel">HR</h1>
             </div>
             <div class="large-12 columns">
                 <i class="decrementHour fi-arrow-down icon-style"></i>
@@ -76,7 +79,10 @@
                 <i class="incrementMinute fi-arrow-up icon-style"></i>
             </div>
             <div class="large-12 columns">
-              <h1 class="minuteValue"></h1>
+              <h1 class="minuteValue timeValues"></h1>
+            </div>
+            <div class="large-12 columns">
+              <h1 id="timeLabel">MIN</h1>
             </div>
             <div class="large-12 columns">
                 <i class="decrementMinute fi-arrow-down icon-style"></i>
