add @time to set-time

--- a/client/views/set-timer/set-timer.html
+++ b/client/views/set-timer/set-timer.html
@@ -94,6 +94,19 @@
   </div>
 
   <div class="row">
+    <div class="large-2 large-offset-5 columns">
+      <div class="row">
+        <div class="large-6 columns">
+          <h1 class="currentHourValue"></h1>
+        </div>
+        <div class="large-6 columns">
+          <h1 class="currentMinuteValue"></h1>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
         <!-- LAUNCH BUTTON -->
     <div class="large-12 columns">
       <button class="setTimeLaunch radius expand">LAUNCH</button>
