create AM/PM on @time

--- a/client/views/set-timer/set-timer.html
+++ b/client/views/set-timer/set-timer.html
@@ -94,15 +94,8 @@
   </div>
 
   <div class="row">
-    <div class="large-2 large-offset-5 columns">
-      <div class="row">
-        <div class="large-6 columns">
-          <h1 class="currentHourValue"></h1>
-        </div>
-        <div class="large-6 columns">
-          <h1 class="currentMinuteValue"></h1>
-        </div>
-      </div>
+    <div class="large-6 large-offset-3 columns">
+          <h1 class="timeString"></h1>
     </div>
   </div>
 
