added code from Night Out and chnaged UI over to Foundation

--- a/client/views/03-set-timer/set-timer.html
+++ b/client/views/03-set-timer/set-timer.html
@@ -4,32 +4,11 @@
     <div class="small-12 medium-10 large-10 small-centered columns">
       <div class="header panel">
         <div class="sign">
-          <h1>Set Time</h1>
+          <h1>Set Launch Time</h1>
         </div>
         <p>
-<!--           <ul class="button-group round toggle" data-toggle="buttons-radio">
-            <li>
-              <input type="radio" name="toggle-group" id="inTimeSwitch" class="button secondary" data-toggle="button">
-              <label for="inTimeSwitch" class="button">
-                Set Launch In
-              </label>
-            </li>
-            <li>
-              <input type="radio" name="toggle-group" id="atTimeSwitch" class="button secondary" data-toggle="button">
-              <label for="atTimeSwitch" class="button">
-                Set Launch At
-              </label>
-            </li>
-          </ul> -->
-
-
           {{> pickerTemplate}}
-<!--           {{#if inTimeSwitchSelected}}
-            {{> inTimeTemplate}}
-          {{else}}
-            {{> atTimeTemplate}}
-          {{/if}}
- -->        </p>
+        </p>
       </div>
     </div>
   </div>
