--- a/client/views/04-final-launch-plan/launch-timer/launch-timer.html
+++ b/client/views/04-final-launch-plan/launch-timer/launch-timer.html
@@ -4,10 +4,9 @@
 </template>
 
 <template name="flipclock">
-  <div class="row">
-    <div class="small-12 columns">
-      <div class="clock"></div>
-      {{makeClock}}
+    <br>
+    <div class="clock">
+        {{makeClock}}
     </div>
-  </div>
+    <br>
 </template>
