--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -5,16 +5,14 @@ body {
   background:#333;
 }
 
+
 .header.panel {
   margin: 3rem auto;
   border: 2px solid #444;
   background: #fff;
 
   p {
-    text-align: center;
-    font: 1rem "Avenir Next";
-    padding: 1rem 2rem 2rem 2rem;
-    margin-top: -1.25rem;
+
 
     span {
       text-transform: uppercase;
@@ -44,6 +42,8 @@ body {
     }
   }
 }
+
+
 
 //=======================TIMER STYLES===================
 
@@ -107,7 +107,7 @@ input[data-toggle]:checked + label:active {
 
 //==================Maps Styles=================
 .map-container {
-  width: 800px;
+  width: 100%;
   max-width: 100%;
   height: 500px;
 }
@@ -132,5 +132,145 @@ input[data-toggle]:checked + label:active {
     border-bottom: 4px solid black;
     border-right: 4px solid black;
     transform: rotate(45deg);
+  }
+}
+//==================Launch Target Item=================
+.event {
+  padding: 1rem 1rem 1rem 0;
+  display: table;
+}
+
+.event-date {
+  width: 6rem;
+  margin: 0 auto 1rem;
+  display: table-cell;
+  width: auto;
+
+  .event-month {
+    margin: 0;
+    background: #eee;
+    padding: 0.5rem 2rem;
+    text-align: center;
+  }
+
+  .event-day {
+    margin: 0;
+    border: 1px solid #eee;
+    padding: 0 2rem;
+    text-align: center;
+    font-size: 2rem;
+  }
+}
+
+.event-desc {
+  padding: 0 0 0 1rem;
+  text-align: left;
+  display: table-cell;
+  vertical-align: top;
+
+  .event-desc-header {
+    margin: 0 0 0.5rem 0;
+    padding: 0;
+  }
+
+  .event-desc-detail {
+    margin: 0 0 0.25rem;
+    padding: 0;
+  }
+
+  .event-desc-time {
+    font-weight: bold;
+  }
+
+  .rsvp.button {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    margin: 0;
+  }
+}
+
+
+//==================Sharing=================
+.btn.btn-facebook {
+  border-radius: 4px;
+  color: #FFFFFF;
+  background: #3B5998;
+}
+.btn.btn-facebook:hover,
+.btn.btn-facebook:focus {
+  color: #FFFFFF;
+}
+.btn.btn-twitter {
+  border-radius: 4px;
+  color: #FFFFFF;
+  background: #4099FF;
+}
+.btn.btn-twitter:hover,
+.btn.btn-twitter:focus {
+  color: #FFFFFF;
+}
+.btn.btn-google-plus {
+  border-radius: 4px;
+  color: #FFFFFF;
+  background: #D34836;
+}
+.btn.btn-github {
+  border-radius: 4px;
+  color: #FFFFFF;
+  background: grey;
+}
+.btn.btn-google-plus:hover,
+.btn.btn-google-plus:focus {
+  color: #FFFFFF;
+}
+
+//==================Footer=================
+
+@mixin vertical-align {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.hero {
+  background: url('/header.jpg') no-repeat center center;
+  background-size: cover;
+  height: 50vh;
+  overflow: hidden;
+  h1,h4, a {
+    color: #fff;
+    text-align: center;
+    @include vertical-align;
+  }
+
+}
+
+
+.footer {
+  background-color: #292c2f;
+  text-align: center;
+  font-size: 1.2rem;
+  padding: 4rem;
+  p {
+    &.slogan {
+      color: #8d9093;
+      font-size: 1.8rem;
+      margin: 0 0 1rem;
+    }
+    &.copywrite {
+      color: #8f9296;
+      font-size: 0.875rem;
+      margin: 0;
+    }
+  }
+  .links a {
+    list-style: none;
+    font-weight: bold;
+    color: #ffffff;
+    padding: 0 0.4rem 0 0.8rem;
+    margin: 1;
+
   }
 }
