--- a/client/views/03-set-timer/set-timer.html
+++ b/client/views/03-set-timer/set-timer.html
@@ -40,7 +40,10 @@
                 <i class="incrementHour fi-arrow-up icon-style"></i>
             </div>
             <div class="large-12 columns">
-              <h1 class="hourValue"></h1>
+              <h1 class="hourValue timeValues"></h1>
+            </div>
+            <div class="large-12 columns">
+              <h1 id="timeLabel">HR</h1>
             </div>
             <div class="large-12 columns">
                 <i class="decrementHour fi-arrow-down icon-style"></i>
@@ -55,7 +58,10 @@
                 <i class="incrementMinute fi-arrow-up icon-style"></i>
             </div>
             <div class="large-12 columns">
-              <h1 class="minuteValue"></h1>
+              <h1 class="minuteValue timeValues"></h1>
+            </div>
+            <div class="large-12 columns">
+              <h1 id="timeLabel">MIN</h1>
             </div>
             <div class="large-12 columns">
                 <i class="decrementMinute fi-arrow-down icon-style"></i>
@@ -63,6 +69,12 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-6 large-offset-3 columns">
+          <h1 class="timeString"></h1>
     </div>
   </div>
 
