Updated working and Readme

--- a/client/views/03-set-timer/set-timer.html
+++ b/client/views/03-set-timer/set-timer.html
@@ -30,7 +30,7 @@
 <template name="pickerTemplate">
   <div class="row">
 
-    <div class="timePicker large-12 columns">
+    <div class="timePicker large-12 small-centered columns">
       <div class="row">
 
         <!-- HOUR PICKER -->
