--- a/client/views/layout/header.html
+++ b/client/views/layout/header.html
@@ -1,6 +1,6 @@
 <template name="header">
     <header class="hero">
         <h1><a href="/">LAUNCH TARGET</a></h1>
-        <h4>Vote on where you are going lunch</h4>
+        <h4>Vote with coworkers on what you are eating for launch today</h4>
     </header>
 </template>
