--- a/client/views/layout/header.html
+++ b/client/views/layout/header.html
@@ -1,6 +1,8 @@
 <template name="header">
     <header class="hero">
-        <h1><a href="/">LAUNCH TARGET</a></h1>
-        <h4>Vote with coworkers on what you are eating for launch today</h4>
+        <a href="/">
+            <img src="logo-white.png">
+        </a>
+        <h4>Helping your crew to find the right lunch target</h4>
     </header>
 </template>
