--- a/client/views/layout/index.html
+++ b/client/views/layout/index.html
@@ -1,5 +1,20 @@
 <head>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+     <!-- Basic Page Needs
+     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+     <meta charset="UTF-8">
+     <title>Launch Target</title>
+     <meta name="description" content="Vote with co-workers on where you are going out to lunch.">
+     <content="Launch Target">
+     <meta name="author" content="Joe Carlson &lt;joe [at] callmejoe [dot] net&gt;">
+     <meta name="copyright" content="Copyright (c) 2016 - Joe Carlson">
+
+     <!-- Mobile Specific Metas
+     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+     <!-- Favicon
+     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
      <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
      <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
      <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
@@ -8,32 +23,36 @@
      <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
      <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
      <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
      <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-     <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
      <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
      <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
      <link rel="manifest" href="/manifest.json">
      <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-     <meta name="apple-mobile-web-app-title" content="Night Out">
-     <meta name="application-name" content="Launch Target">
      <meta name="msapplication-TileColor" content="#da532c">
      <meta name="msapplication-TileImage" content="/mstile-144x144.png">
      <meta name="theme-color" content="#ffffff">
 
-     <meta property="og:description" content="Vote with co-workers on where you are going out to lunch.">
-     <meta property="og:title" content="Launch Target" />
-     <meta property="og:url" content="http://launchtarget.io/" />
-     <meta property="og:type" content="website" />
-     <meta property="og:image" content="http://launchtarget.io"/>
+     <!-- OG Meta Data
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta property="og:description" content="Vote with co-workers on where you are going out to lunch.">
+    <meta property="og:title" content="Launch Target">
+    <meta property="og:url" content="http://launch-target.meteor.com">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Launch Target" />
+    <meta property="og:image" content="http://launch-target.meteor.com/cover-photo.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:description" content="Launch Target">
+    <meta name="twitter:title" content="Launch Target">
+    <meta name="twitter:site" content="@JoeCarlson131">
+    <meta name="twitter:image" content="http://launch-target.meteor.com/cover-photo.png">
+    <meta name="twitter:creator" content="@josephcarlson131">
+    <link rel="author" href="https://plus.google.com/u/0/+JoeKarlsson/posts">
 
-     <link rel="author" href="https://plus.google.com/u/0/+JoeKarlsson/posts"/>
+    <!-- CSS
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
 
-     <meta name="twitter:card" content="http://launchtarget.io" />
-
-     <title>Launch Target</title>
-
-     <meta name="description" content="Vote with co-workers on where you are going out to lunch.">
+    <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 
 
 </head>
