--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -2,14 +2,40 @@
 @import ".meteor/local/build/programs/server/assets/packages/matthew_foundation5-sass/foundation";
 
 body {
-  background:#333;
+  background: none;
+  color: none;
 }
 
+html {
+  background: url(http://cloud-3.steamusercontent.com/ugc/26235048002144456/5E26BB6D44C9F86E88497969C20A1A14960DDCC3/) no-repeat center center fixed;
+  background-size: cover;
+}
+/*http://i.dailymail.co.uk/i/pix/2013/10/16/100000starsgif1.gif*/
+
+.panel {
+  font-family: Orbitron;
+  h1, h2, h3, h4, h5, h6 {
+    font-family: Orbitron;
+    color: #D9BB5C;
+    margin: 10px;
+  }
+  p {
+    font-family: Orbitron;
+    color: #DAD9D4;
+    text-align: center;
+  }
+}
 
 .header.panel {
+  font-family: Orbitron;
   margin: 3rem auto;
-  border: 2px solid #444;
-  background: #fff;
+  border: 2px solid #133B48;
+  background: #133B48;
+  opacity: .9;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
 
   p {
 
@@ -23,22 +49,22 @@ body {
   }
 
   .sign {
-    background:#fff;
+    font-family: Orbitron;
+    background:#469591;
     width: 90%;
-    height: 2.4rem;
-    border: 2px solid #444;
+    border: 2px solid #469591;
     position: relative;
     top: -2.5rem;
     margin: auto;
 
-    h1 {
+    h2 {
+      font-family: Orbitron;
       text-transform: uppercase;
-      font: bolder 0.875rem "Avenir Next";
+      font: bolder 0.875rem;
       letter-spacing: 3px;
-      color: #666;
-      font-size: 70%;
+      color: #D9BB5C;
       text-align: center;
-      line-height: 2rem;
+      font-size: medium;
     }
   }
 }
@@ -98,7 +124,7 @@ input[data-toggle]:checked + label:active {
 }
 
 .setTimeLaunch {
-  background-color: #333;
+  background-color: #469591;
   margin-top: 3.2rem;
   &:hover {
     background-color: #B4243B;
@@ -112,11 +138,17 @@ input[data-toggle]:checked + label:active {
 .timeValues {
   font-size: 5rem;
 }
+
+.flip-clock-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
 //==================Maps Styles=================
 .map-container {
-  width: 100%;
   max-width: 100%;
   height: 500px;
+  opacity: 1;
 }
 
 .styled-checkbox {
@@ -141,17 +173,17 @@ input[data-toggle]:checked + label:active {
     transform: rotate(45deg);
   }
 }
+
 //==================Launch Target Item=================
 .event {
-  padding: 1rem 1rem 1rem 0;
-  display: table;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .event-date {
-  width: 6rem;
-  margin: 0 auto 1rem;
-  display: table-cell;
-  width: auto;
 
   .event-month {
     margin: 0;
@@ -171,9 +203,13 @@ input[data-toggle]:checked + label:active {
 
 .event-desc {
   padding: 0 0 0 1rem;
-  text-align: left;
-  display: table-cell;
-  vertical-align: top;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+
+  h4 {
+    font-size: x-large;
+  }
 
   .event-desc-header {
     margin: 0 0 0.5rem 0;
@@ -201,73 +237,76 @@ input[data-toggle]:checked + label:active {
 .btn.btn-facebook {
   border-radius: 4px;
   color: #FFFFFF;
-  background: #3B5998;
 }
 .btn.btn-facebook:hover,
 .btn.btn-facebook:focus {
   color: #FFFFFF;
+  background: #3B5998;
 }
 .btn.btn-twitter {
   border-radius: 4px;
   color: #FFFFFF;
-  background: #4099FF;
 }
 .btn.btn-twitter:hover,
 .btn.btn-twitter:focus {
   color: #FFFFFF;
+  background: #4099FF;
 }
 .btn.btn-google-plus {
   border-radius: 4px;
   color: #FFFFFF;
+}
+.btn.btn-google-plus:hover,
+.btn.btn-google-plus:focus {
   background: #D34836;
+  color: #FFFFFF;
 }
 .btn.btn-github {
   border-radius: 4px;
   color: #FFFFFF;
-  background: grey;
 }
-.btn.btn-google-plus:hover,
-.btn.btn-google-plus:focus {
+.btn.btn-github:hover,
+.btn.btn-github:focus {
+  background: grey;
   color: #FFFFFF;
 }
-
 //==================Footer=================
 
-@mixin vertical-align {
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-
 .hero {
-  background: url('/header.jpg') no-repeat center center;
+  font-family: Orbitron;
   background-size: cover;
-  height: 50vh;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-content: space-around;
+  margin: 5%;
+
   h1,h4, a {
-    color: #fff;
+    font-family: Orbitron;
+    color: #D9BB5C;
     text-align: center;
-    @include vertical-align;
+    margin-top: 15px;
   }
 
 }
 
 
 .footer {
-  background-color: #292c2f;
+  opacity: .8;
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 100%);
   text-align: center;
   font-size: 1.2rem;
   padding: 4rem;
+  font-family: Orbitron;
   p {
     &.slogan {
-      color: #8d9093;
+      color: #D9BB5C;
       font-size: 1.8rem;
       margin: 0 0 1rem;
     }
     &.copywrite {
-      color: #8f9296;
+      color: #469591;
       font-size: 0.875rem;
       margin: 0;
     }
@@ -277,7 +316,7 @@ input[data-toggle]:checked + label:active {
     font-weight: bold;
     color: #ffffff;
     padding: 0 0.4rem 0 0.8rem;
-    margin: 1;
+    margin: 5px;
 
   }
 }
