styles and packages mostly working.

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -7,7 +7,7 @@ body {
 }
 
 html {
-  background: url(http://cloud-3.steamusercontent.com/ugc/26235048002144456/5E26BB6D44C9F86E88497969C20A1A14960DDCC3/) no-repeat center center fixed;
+  background: url(https://user-images.githubusercontent.com/4650739/50996938-f5c7f000-14e8-11e9-9aaa-2838a02364ac.gif) no-repeat center center fixed;
   background-size: cover;
 }
 /*http://i.dailymail.co.uk/i/pix/2013/10/16/100000starsgif1.gif*/
